tests/gen-derivation/derivation/norec-noext-dep_cons_param-001-neg/expected
Error: While processing right hand side of derivedGen. Error during reflection: Target type's argument must be a variable name

DerivedGen:12:33--12:37
 08 | 
 09 | %language ElabReflection
 10 | 
 11 | export
 12 | derivedGen : Fuel -> Gen (Maybe Bool)
                                      ^^^^

Error: Undefined name main. 
Did you mean: min?
